identify producer memory leak issue. Requests were being sent too fast for netty and netty was using direct memory buffers.  Added a configurable delay to throttle requests to a reasonable rate.